--- a/creacioXat/src/assets/main.css
+++ b/creacioXat/src/assets/main.css
@@ -20,7 +20,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  max-height: 600px;
+  max-height: 500px;
   overflow-y: auto;
   background-color: #f0f4f8;
   border: 1px solid #ddd;
@@ -65,7 +65,7 @@
 /* Estils per al formulari de missatge */
 .missatge-form {
   display: flex;
-  margin-top: 1rem;
+  margin-top: 1rem
 }
 
 /* Estils per al camp de text */
